--- a/CURProyect/src/assets/style/Form.css
+++ b/CURProyect/src/assets/style/Form.css
@@ -8,6 +8,7 @@
     border-radius: 20px;
     position: relative;
     box-shadow: 0px 0px 5rem rgba(0, 0, 0, 0.15); 
+
 }
   
   .title {
@@ -131,22 +132,22 @@
   }
 
 .centered-table {
-    margin: 0 auto;
+    /* margin: 0 auto; */
     border-collapse: collapse;
     width: 80%;
     text-align: center;
 }
 
 .centered-table th, .centered-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
+    border: 1px solid #939292b0;
+    padding: 20px;
 }
 
 .centered-table th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: rgba(0, 255, 255, 0.879);
     color: white;
     text-align: center;
 }
